--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -258,12 +258,19 @@ android {
         }
     }
 }
+plugins {
+  id 'com.metroreactnative'
+  // Add the Google services Gradle plugin
+  id 'com.google.gms.google-services'
+}
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation platform('com.google.firebase:firebase-bom:31.1.0')
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
 
